fixed certification spacing

--- a/assets/sass/sections/programs.sass
+++ b/assets/sass/sections/programs.sass
@@ -10,6 +10,7 @@
                     @include meta
                     position: relative
                     top: unset !important
+            
             .content > div 
                 > section
                     > h3:first-of-type
@@ -25,6 +26,10 @@
                     margin-top: $spacing-4 !important
                     h3
                         margin-top: 0 !important
+                .rich-text
+                    img + p
+                        margin-top: 1em
+            
             .content > div:first-of-type
                 > section:first-of-type
                     > h3
